--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,7 @@ tests/unittests/test-file*
 /xpra/platform/win32/propsys.cpp
 /xpra/platform/posix/netdev_query.c
 /xpra/platform/posix/sd_listen.c
-/xpra/platform/posix/proc_libproc.c
+/xpra/platform/posix/proc_libproc.cpp
 /xpra/platform/posix/proc_procps.c
 /xpra/server/cystats.c
 /xpra/server/pam.c
