--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools Cython
+          sudo apt-get install -y libx11-dev libxcomposite-dev libxdamage-dev libxtst-dev libxkbfile-dev libxres-dev
+          sudo apt-get install -y libavif-dev libyuv-dev libvpx-dev libx264-dev libopenh264-dev libwebp-dev libturbojpeg-dev
+          sudo apt-get install -y libgtk-3-dev python3-dev python3-cairo-dev python-gi-dev gcc libsystemd-dev libpam0g-dev
+          sudo apt-get install -y liblz4-dev libbrotli-dev libxxhash-dev libqrencode-dev pandoc
       - name: Build with extra cythonization
         run: |
           python ./setup.py build --with-cythonize_more
