--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -31,6 +31,7 @@ Build-Depends: debhelper (>= 8)
               ,libturbojpeg-dev
 #lunar:              ,libspng-dev
 #mantic:              ,libspng-dev
+#noble:              ,libspng-dev
 #bookworm:              ,libspng-dev
 #trixie:              ,libspng-dev
 #sid:              ,libspng-dev
@@ -278,6 +279,7 @@ Depends: xpra-codecs (= ${binary:Version})
 #jammy:              ,libavif13
 #lunar:              ,libavif15
 #mantic:              ,libavif15
+#noble:              ,libavif16
 #bookworm:              ,libavif15
 #trixie:              ,libavif16
 #sid:              ,libavif16
