--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -287,6 +287,7 @@ Recommends:
         ,gstreamer-plugins-ugly
         ,gstreamer1.0-vaapi
         ,gstreamer1.0-pipewire
+        ,python3-gst-1.0
 Description: Extra picture and video codecs
  for the xpra server and client.
 
