--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
                 xauth x11-xkb-utils \
                 xvfb python3-cairo python3-gi-cairo \
                 libturbojpeg-dev libwebp-dev python3-pil \
-                libx264-dev libvpx-dev \
+                libx264-dev libvpx-dev libyuv-dev libavif-dev \
                 python3-dbus python3-cryptography \
                 python3-netifaces \
                 openssh-client sshpass python3-paramiko \
