--- a/fs/share/applications/xpra-gui.desktop
+++ b/fs/share/applications/xpra-gui.desktop
@@ -7,4 +7,4 @@ Terminal=false
 Type=Application
 StartupNotify=false
 Categories=Network;RemoteAccess;
-Keywords=X11;screen;forwarding;client;server
+Keywords=screen;forwarding;client;server
