--- a/fs/share/applications/xpra-launcher.desktop
+++ b/fs/share/applications/xpra-launcher.desktop
@@ -10,4 +10,4 @@ Type=Application
 StartupNotify=false
 Categories=Network;RemoteAccess;
 MimeType=application/x-xpraconfig;
-Keywords=X11;screen;forwarding;client;server
+Keywords=screen;forwarding;client;server
