--- a/fs/share/applications/xpra-shadow.desktop
+++ b/fs/share/applications/xpra-shadow.desktop
@@ -8,4 +8,4 @@ NoDisplay=true
 Type=Application
 StartupNotify=false
 Categories=Network;RemoteAccess;
-Keywords=X11;screen;forwarding;client;server
+Keywords=screen;forwarding;client;server
