#4187 'konsole' is a text application

--- a/fs/etc/xpra/content-type/50_class.conf
+++ b/fs/etc/xpra/content-type/50_class.conf
@@ -73,6 +73,7 @@ class-instance:ibus.*=text
 class-instance:IBus Panel=picture
 class-instance:ibus-ui-emojier=picture
 class-instance:jetbrains.*=text
+class-instance:konsole=text
 class-instance:sun-tools-jconsole-JConsole=text
 class-instance:sun-security-tools-policytool-PolicyTool=text
 class-instance:libfm-pref-apps=text
