--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,7 @@ jobs:
     - name: "Build/Install/Test"
       run: >
         python3 setup.py unittests
+        --skip-fail unit.server.server_auth_test
         --skip-slow unit.server.shadow_server_test
         --skip-slow unit.server.mixins.start_option_test
         --skip-slow unit.server.mixins.shadow_option_test
