--- a/fs/etc/xpra/conf.d/30_picture.conf.in
+++ b/fs/etc/xpra/conf.d/30_picture.conf.in
@@ -23,7 +23,7 @@ encoding = auto
 # video-encoders = none
 # video-encoders = all
 # video-encoders = all,-x264
-video-encoders = all,-gstreamer
+video-encoders = all
 
 # Used by both the client and server for colourspace conversion:
 # csc-modules = swscale, cython, libyuv
