no need to generate /etc/xpra/xpra.conf
also update the information given to not use outdated hard-coded paths that are only valid on Posix.
The nvenc and cuda config files should be bundled, even if we made non-X11 builds.

--- a/fs/etc/xpra/xpra.conf
+++ b/fs/etc/xpra/xpra.conf
@@ -4,11 +4,11 @@
 # You can provide default values for most command line
 # options here.
 #
-# The configuration files in the conf.d directory will
+# The configuration files in the `conf.d` directory will
 # be parsed first.
 #
-# Each user may also define its own options in the file
-# ~/.xpra/xpra.conf which will take precedence over this file.
+# Each user may also define its own options in the user configuration files.
+# See `user_conf` in `xpra path-info` for the locations on your platform.
 #
 # Most options can also be overriden on the xpra command line.
 # See "xpra -h" or the man page for details.
