--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -283,6 +283,7 @@ Package: xpra-codecs-extras
 Architecture: any
 Conflicts: python2-xpra, python3-xpra, xpra (<< 5)
 Breaks: python2-xpra (<< 5), python3-xpra (<< 5), xpra (<< 5)
+Conflicts: xpra-codecs (<< 6)
 Enhances: xpra-codecs (= ${binary:Version})
 Depends: xpra-codecs (= ${binary:Version})
         ,${codecsextras:Depends}
@@ -307,6 +308,7 @@ Package: xpra-codecs-nvidia
 Architecture: any
 Conflicts: python2-xpra, python3-xpra, xpra (<< 5)
 Breaks: python2-xpra (<< 5), python3-xpra (<< 5), xpra (<< 5)
+Conflicts: xpra-codecs (<< 6)
 Enhances: xpra-codecs (= ${binary:Version})
 Depends: xpra-codecs (= ${binary:Version})
         ,${python3:Depends}
