--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -305,9 +305,8 @@ Description: Extra picture and video codecs
 
 Package: xpra-codecs-nvidia
 Architecture: any
-Conflicts: python2-xpra, python3-xpra, xpra (<< 5)
+Conflicts: python2-xpra, python3-xpra, xpra (<< 5), xpra-codecs (<< 6)
 Breaks: python2-xpra (<< 5), python3-xpra (<< 5), xpra (<< 5)
-Conflicts: xpra-codecs (<< 6)
 Enhances: xpra-codecs (= ${binary:Version})
 Depends: xpra-codecs (= ${binary:Version})
         ,${python3:Depends}
