#4243 map 'Visual Studio Code' to text content-type

--- a/fs/etc/xpra/content-type/50_class.conf
+++ b/fs/etc/xpra/content-type/50_class.conf
@@ -139,3 +139,6 @@ class-instance:xpra-toolbox=text
 class-instance:xpra-gui=text
 class-instance:xpra-launcher-gui=text
 class-instance:yelp=text
+
+# Visual Studio Code:
+class-instance:Code - Insiders=text
