--- a/src/content-type/50_class.conf
+++ b/src/content-type/50_class.conf
@@ -139,3 +139,6 @@ class-instance:xpra-toolbox=text
 class-instance:xpra-gui=text
 class-instance:xpra-launcher-gui=text
 class-instance:yelp=text
+
+# Visual Studio Code:
+class-instance:Code - Insiders=text
