--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -219,13 +219,22 @@ Suggests: xpra-codecs-nvidia (= ${binary:Version})
         ,python-psutil
 # webcam support:
         ,python3-opencv
-# to make the system tray work again with gnome-shell:
-        ,gnome-shell-extension-top-icons-plus
-        ,gnome-shell-extension-appindicator
+        ,xpra-client-gnome
 # password prompts:
         ,pinentry-gnome3
 Description: tool to detach/reattach running X programs,
  this is the xpra client user interface using GTK3
+
+
+Package: xpra-client-gnome
+Architecture: any
+Depends: xpra-client-gtk3 (= ${binary:Version})
+        ,gnome-shell-extension-top-icons-plus
+        ,gnome-shell-extension-appindicator
+Description: This package installs the GNOME Shell extensions
+ that can help in restoring the system tray functionality.
+ It also includes the input-source-manager@xpra_org extension which
+ is required for querying and activating keyboard input sources.
 
 
 Package: xpra-audio
