--- a/fs/etc/xpra/conf.d/55_server_x11.conf.in
+++ b/fs/etc/xpra/conf.d/55_server_x11.conf.in
@@ -31,6 +31,7 @@ sync-xvfb = auto
 # - Xvfb option (limited DPI support)
 # xvfb = Xvfb -nolisten tcp -noreset \
 #        +extension GLX +extension Composite \
+#        +extension RANDR +extension RENDER \
 #        -auth $XAUTHORITY \
 #        -screen 0 8192x4096x24+32 \
 #        -dpi 96x96
