the github page they link to is wrong
we have to pin to ubuntu 20.04 to be able to test with Python 3.6

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,10 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.6.15", "3.12.4"]
+        python-version: ["3.6", "3.12"]
     steps:
       - uses: actions/checkout@v4
         with:
