replace pyinotify with Gio monitor

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
                 python3-dbus python3-cryptography \
                 python3-netifaces \
                 openssh-client sshpass python3-paramiko \
-                python3-setproctitle python3-xdg python3-pyinotify \
+                python3-setproctitle python3-xdg \
                 libpam-dev xserver-xorg-dev xutils-dev xserver-xorg-video-dummy xvfb keyboard-configuration \
                 python3-kerberos python3-gssapi python3-aioquic \
                 python3-gst-1.0 \
