--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         # see docs/Build/Debian.md
         sudo apt-get update
         sudo apt-get -y install libx11-dev libxtst-dev libxcomposite-dev libxdamage-dev libxres-dev \
-                libxkbfile-dev python-all-dev pandoc libsystemd-dev \
+                libxkbfile-dev pandoc libsystemd-dev \
                 libgtk-3-dev python3-dev python3-cairo-dev python-gi-dev \
                 python3-typing-extensions \
                 xauth x11-xkb-utils \
