--- a/src/packaging/debian/xpra/control
+++ b/src/packaging/debian/xpra/control
@@ -40,6 +40,11 @@ Build-Depends: debhelper (>= 8)
 #buster:              ,libavcodec-dev
 #buster:              ,libavformat-dev
 #buster:              ,libswscale-dev
+              ,gcc
+# only needed for building the CUDA kernels instead of gcc >= 14:
+#oracular:              ,clang-19
+#trixie:              ,clang-16
+#sid:              ,clang-19
               ,dh-python
               ,dh-systemd
               ,libsystemd-dev
