--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -53,6 +53,10 @@ Build-Depends: debhelper (>= 8)
 # we install a more up to date version using the build script:
 #              ,cython3
               ,gcc
+# only needed for building the CUDA kernels instead of gcc >= 14:
+#oracular:              ,clang-19
+#trixie:              ,clang-16
+#sid:              ,clang-19
               ,libavcodec-dev [!i386]
               ,libavformat-dev [!i386]
               ,libavutil-dev [!i386]
