--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -42,9 +42,9 @@ Build-Depends: debhelper (>= 8)
               ,python-gi-dev
               ,gcc
 # only needed for building the CUDA kernels instead of gcc >= 14:
-#oracular:              ,clang-19
-#trixie:              ,clang-16
-#sid:              ,clang-19
+#oracular:              ,clang [!riscv64]
+#trixie:              ,clang [!riscv64]
+#sid:              ,clang [!riscv64]
               ,dh-python
               ,libsystemd-dev
               ,libpam0g-dev
