--- a/fs/etc/xpra/conf.d/55_server_x11.conf.in
+++ b/fs/etc/xpra/conf.d/55_server_x11.conf.in
@@ -35,6 +35,8 @@ sync-xvfb = auto
 #        -auth $XAUTHORITY \
 #        -screen 0 8192x4096x24+32 \
 #        -dpi 96x96
+# - weston + Xwayland option:
+# xvfb = /usr/libexec/xpra/xpra_weston_xvfb
 # - Xephyr (requires a running X11 server):
 # xvfb = Xephyr -nolisten tcp -noreset \
 #        +extension GLX +extension Composite \
