--- a/fs/etc/xpra/conf.d/30_picture.conf.in
+++ b/fs/etc/xpra/conf.d/30_picture.conf.in
@@ -81,6 +81,14 @@ auto-refresh-delay = 0.15
 #pixel-depth = 30
 pixel-depth = 0
 
+# Refresh rate configured for the virtual display
+# in Hertz, as a percentage of the value detected, or as a range:
+# refresh-rate = auto
+# refresh-rate = 60
+# refresh-rate = 50%
+# refresh-rate = 10-144
+refresh-rate = auto
+
 # Video encoders loaded by the server
 # (all of them unless specified)
 # examples:
