--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -40,9 +40,9 @@ Build-Depends: debhelper (>= 8)
               ,libx264-dev
               ,libwebp-dev
               ,libturbojpeg-dev
-#lunar:              ,libspng-dev
-#mantic:              ,libspng-dev
 #noble:              ,libspng-dev
+#oracular:              ,libspng-dev
+#plucky:              ,libspng-dev
 #bookworm:              ,libspng-dev
 #trixie:              ,libspng-dev
 #sid:              ,libspng-dev
@@ -283,23 +283,31 @@ Breaks: python2-xpra (<< 5), python3-xpra (<< 5), xpra (<< 5)
 Depends: xpra-common (= ${binary:Version})
         ,${codecs:Depends}
         ,${python3:Depends}
-#lunar:              ,libspng0
-#mantic:              ,libspng0
+        ,libyuv0
+#jammy:              ,libopenh264-6
+#noble:              ,libopenh264-7
+#oracular:              ,libopenh264-7
+#plucky:              ,libopenh264-7
+#bookworm:              ,libopenh264-7
+#trixie:              ,libopenh264-7
+#sid:              ,libopenh264-7
 #noble:              ,libspng0
+#oracular:              ,libspng0
+#plucky:              ,libspng0
 #bookworm:              ,libspng0
 #trixie:              ,libspng0
 #sid:              ,libspng0
 #jammy:              ,libavif13
-#lunar:              ,libavif15
-#mantic:              ,libavif15
 #noble:              ,libavif16
+#oracular:              ,libavif16
+#plucky:              ,libavif16
 #bookworm:              ,libavif15
 #trixie:              ,libavif16
 #sid:              ,libavif16
 #jammy:              ,libyuv0
-#lunar:              ,libyuv0
-#mantic:              ,libyuv0
 #noble:              ,libyuv0
+#oracular:              ,libyuv0
+#plucky:              ,libyuv0
 #bookworm:              ,libyuv0
 #trixie:              ,libyuv0
 #sid:              ,libyuv0
