--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         sudo apt-get update
         sudo apt-get -y install libx11-dev libxtst-dev libxcomposite-dev libxdamage-dev libxres-dev \
                 libxkbfile-dev python3-dev pandoc libsystemd-dev \
-                libgtk-3-dev python3-dev python3-cairo-dev python-gi-dev cython3 \
+                libgtk-3-dev python3-dev python3-cairo-dev python-gi-dev \
                 xauth x11-xkb-utils \
                 xvfb python3-cairo python3-gi-cairo \
                 libturbojpeg-dev libwebp-dev python3-pil \
@@ -35,6 +35,10 @@ jobs:
                 python3-coverage \
                 openssl \
                 x11-xserver-utils dbus-x11
+
+    - name: Install less buggy Cython
+      run: |
+        python -m pip install --upgrade Cython
 
     - name: "Build/Install/Test"
       run: >
