--- a/fs/etc/xpra/conf.d/55_server_x11.conf.in
+++ b/fs/etc/xpra/conf.d/55_server_x11.conf.in
@@ -40,6 +40,7 @@ sync-xvfb = auto
 # xvfb = Xvfb -nolisten tcp -noreset \
 #        +extension GLX +extension Composite \
 #        +extension RANDR +extension RENDER \
+#        -extension DOUBLE-BUFFER \
 #        -auth $XAUTHORITY \
 #        -screen 0 8192x4096x24+32 \
 #        -dpi 96x96
