--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -41,7 +41,7 @@ Build-Depends: debhelper (>= 8)
               ,python-gi-dev
               ,gcc
 # only needed for building the CUDA kernels instead of gcc >= 14:
-#oracular:              ,clang [!riscv64]
+#oracular:              ,clang-19 [!riscv64]
 #trixie:              ,clang [!riscv64]
 #sid:              ,clang [!riscv64]
               ,dh-python
