#4529 partial revert of 6966b65df8a1968ce687d2e68bf96bc3d2261c54
Ubuntu Oracular still uses a versioned package name

--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -54,7 +54,7 @@ Build-Depends: debhelper (>= 8)
 #              ,cython3
               ,gcc
 # only needed for building the CUDA kernels instead of gcc >= 14:
-#oracular:              ,clang [!riscv64]
+#oracular:              ,clang-19 [!riscv64]
 #trixie:              ,clang [!riscv64]
 #sid:              ,clang [!riscv64]
               ,libavcodec-dev [!i386]
