--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -37,6 +37,7 @@ Build-Depends: debhelper (>= 8)
 #sid:              ,libspng-dev
               ,libgtk-3-dev
               ,python3-dev (>= 3.10)
+              ,python3-setuptools
               ,python3-cairo-dev
               ,python-gi-dev
               ,gcc
