--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -48,6 +48,9 @@ Build-Depends: debhelper (>= 8)
 #sid:              ,libspng-dev
               ,libgtk-3-dev
               ,python3-dev
+#plucky:              ,python3-setuptools
+#trixie:              ,python3-setuptools
+#sid:              ,python3-setuptools
               ,python3-cairo-dev
               ,python-gi-dev
 # we install a more up to date version using the build script:
