stronger type hints

--- a/fs/etc/xpra/xorg.conf
+++ b/fs/etc/xpra/xorg.conf
@@ -4,12 +4,12 @@
 # https://github.com/Xpra-org/xpra/blob/master/docs/Usage/Xdummy.md
 
 Section "ServerFlags"
-  Option "DontVTSwitch" "true"
-  Option "AllowMouseOpenFail" "true"
-  Option "PciForceNone" "true"
-  Option "AllowEmptyInput" "true"
-  Option "AutoEnableDevices" "false"
-  Option "AutoAddDevices" "false"
+  Option "DontVTSwitch" "on"
+  Option "AllowMouseOpenFail" "on"
+  Option "PciForceNone" "on"
+  Option "AllowEmptyInput" "on"
+  Option "AutoEnableDevices" "off"
+  Option "AutoAddDevices" "off"
 EndSection
 
 Section "Device"
