most users will expect the xpra x11 server to be installed by default

--- a/packaging/debian/xpra/control
+++ b/packaging/debian/xpra/control
@@ -68,6 +68,7 @@ Depends: xpra-client (= ${binary:Version})
          ,xpra-server (= ${binary:Version})
          ,xpra-codecs (= ${binary:Version})
 Recommends: xpra-audio (= ${binary:Version})
+            ,xpra-x11 (= ${binary:Version})
             ,xpra-codecs-extras (= ${binary:Version})
 Suggests:  xpra-codecs-nvidia (= ${binary:Version})
          ,xpra-codecs-amd (= ${binary:Version})
